# J.A.R.V.I.S

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  arm64_toolchain.cmake  buildClient.sh  buildFull.sh  buildServer.sh  build_project.bat  build_project.sh  x86_64_toolchain.cmake
cmake/: FindGLib.cmake  aarch64_linux_toolchain.cmake  x86_64_linux_toolchain copy.cmake  x86_64_toolchain.cmake  x86_windows_toolchain.cmake
embedded/: platformio.ini
embedded/include/: GPIOMgr.h  TemperatureSensor.h  WebServer.h
embedded/src/: GPIOMgr.cpp  TemperatureSensor.cpp  WebServer.cpp  main.cpp
include/: BluetoothComm.h  DeviceScanner.h  PixelRing.h  Pixel_Ring.h  ReSpeaker.h  Wifi.h  input_tdm.h  model.h  model_runner.h  wifi_server.h
include/AirPlayServer/: AirPlayServer.h
include/AirPlayServer/lib/: CMakeLists.txt  byteutils.h  compat.h  crypto.c  dnssd.c  dnssd.h  dnssdint.h  fairplay.h  http_request.c  http_response.c  http_response.h  httpd.c  httpd.h  logger.c  mirror_buffer.h  netutils.c  netutils.h  pairing.c  pairing.h  raop.c  raop.h  raop_buffer.h  raop_handlers.h  raop_ntp.c  raop_ntp.h  raop_rtp.h  raop_rtp_mirror.c  raop_rtp_mirror.h  srp.c  srp.h  stream.h  threads.h  utils.c
include/AirPlayServer/lib/llhttp/: llhttp.c
include/AirPlayServer/lib/playfair/: CMakeLists.txt  LICENSE.md
include/AirPlayServer/renderers/: audio_renderer.h  video_renderer.h  x_display_fix.h
include/ClientInfo/: ClientInfo.h
include/Configuration/: Configuration.h
include/ConfigurationManager/: ConfigurationManager.h
include/HomeAssistantAPI/: HomeAssistantAPI.h
include/Tokenizer/: Tokenizer.h
include/WatchDog/: WatchDog.h  Watchdog.h
include/ac10x/: ReSpeaker.h  ac108.h
include/additions/: DeviceScanner.h  PixelRing.h
include/audio_input/: ReSpeaker.h  ac10x.h
include/bluethoothcomm/: BluetoothComm.h
include/dataStructures/: DataStructures.h
include/hardwareinterface/: HardwareInterface.h
include/inputhandler/: InputHandler.h
include/mediaplayer/: MediaPlayer.h
include/ml/: LlamaWrapper.h  ModelRunner.h  model_runner.h
include/networkmanager/: NetworkManager.h
include/prometheus/: check_names.h  client_metric.h  collectable.h  counter.h  family.h  gauge.h  histogram.h  info.h  metric_family.h  registry.h  serializer.h  summary.h  text_serializer.h
include/prometheus/detail/: builder.h  ckms_quantiles.h  core_export.h  time_window_quantiles.h  utils.h
include/task/: Task.h
include/taskprocessor/: TaskProcessor.h
include/webServer/: webServer.h
include/web_server/: authorization.h  authorization_api.h  authorization_dummy.h  common.h  http_auth_client.h  http_error_handlers.h  http_path.h  http_session.h  listener.h  root_certificates.h  routes.h  stdafx.h  version.h  web_service.h  web_service_context.h
include/whisperTranscriber/: WhisperTranscriber.h
include/wifi/: Wifi.h
lib/AirPlayServer/lib/: byteutils.c  crypto.h  fairplay_playfair.c  global.h  http_request.c  http_request.h  http_response.c  http_response.h  httpd.c  httpd.h  logger.h  mirror_buffer.c  raop.c  raop_buffer.c  raop_handlers.h  raop_rtp.c  raop_rtp_mirror.h  sockets.h  utils.h
lib/AirPlayServer/lib/llhttp/: CMakeLists.txt  api.c  llhttp.h
lib/AirPlayServer/lib/playfair/: omg_hax.c
lib/AirPlayServer/renderers/: CMakeLists.txt  audio_renderer_gstreamer.c  video_renderer_gstreamer.c
src/: client.cpp  full.cpp  main.cpp  server.cpp
src/additions/: Pixel_Ring.cpp
src/audio_input/: ReSpeaker.cpp  input_tdm.cpp  respeaker.cpp
src/bluetooth/: BluetoothComm.cpp
src/client/AirPlayServer/: AirPlayServer.cpp
src/client/ac10x/: ReSpeaker.cpp  ac108.c
src/client/additions/: DeviceScanner.cpp  PixelRing.cpp  Pixel_Ring.cpp
src/client/audio_input/: ReSpeaker.cpp  ac108.c
src/client/wifi/: wifi_client.cpp
src/default/ClientInfo/: ClientInfo.cpp
src/default/Configuration/: Configuration.cpp
src/default/ConfigurationManager/: ConfigurationManager.cpp
src/default/MediaPlayer/: MediaPlayer.cpp
src/default/bluetooth/: BluetoothComm.cpp
src/default/hardwareinterface/: HardwareInterface.cpp
src/default/networkmanager/: NetworkManager.cpp
src/default/prometheus/: check_names.cpp  family.cpp  gauge.cpp  registry.cpp  summary.cpp  text_serializer.cpp
src/default/prometheus/detail/: builder.cpp
src/default/watchDog/: WatchDog.cpp  Watchdog.cpp
src/default/webserver/: webserver.cpp
src/defealt/AirPlayServer/: AirPlayServer.cpp
src/defealt/ClientInfo/: ClientInfo.cpp
src/defealt/MediaPlayer/: MediaPlayer.cpp
src/defealt/bluetooth/: BluetoothComm.cpp
src/defealt/hardwareinterface/: HardwareInterface.cpp
src/defealt/networkmanager/: NetworkManager.cpp
src/defealt/prometheus/: counter.cpp  histogram.cpp  info.cpp  serializer.cpp
src/defealt/prometheus/detail/: utils.cpp
src/defealt/task/: task.cpp
src/defealt/taskprocessor/: taskprocessor.cpp
src/ml/: model.cpp
src/server/: wifi_server.cpp
src/server/AirPlayServer/: AirPlayServer.cpp
src/server/HomeAssistantAPI/: HomeAssistantAPI.cpp
src/server/inputhandler/: inputhandler.cpp
src/server/ml/: LlamaWrapper.cpp  ModelRunner.cpp  model_runner.cpp
src/server/task/: task.cpp
src/server/taskprocessor/: taskprocessor.cpp
src/server/web_service/: authorization_api.cpp  authorization_dummy.cpp  http_auth_client.cpp  http_error_handlers.cpp  http_path.cpp  http_session.cpp  listener.cpp  root_certificates.cpp  routes.cpp  web_service.cpp  web_service_context.cpp
src/server/webserver/: webserver.cpp
src/server/whisperTranscriber/: WhisperTranscriber.cpp
src/server/wifi/: wifi_server.cpp
src/temp/: client.cpp  server.cpp
src/tensorflow/: model.cpp
src/wifi/: wifi_server.cpp
webserver/private/client/pages/: config_page.html  home.html
webserver/private/pages/: config_page.html
webserver/private/server/pages/: config_page.html
webserver/public/: scripts.js  styles.css
